--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -5,7 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config ./bin/www"
+    "start": "nodemon -r dotenv/config ./bin/www",
+    "db:create": "dotenv sequelize-cli db:create",
+    "db:drop": "dotenv sequelize-cli db:drop",
+    "db:migrate": "dotenv sequelize-cli db:migrate",
+    "db:migrate:undo:all": "dotenv sequelize-cli db:migrate:undo:all",
+    "db:redo": "npm run db:seed:undo:all && npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed:all",
+    "db:seed:all": "dotenv sequelize-cli db:seed:all",
+    "db:seed:undo:all": "dotenv sequelize-cli db:seed:undo:all",
+    "dev": "dotenv nodemon ./bin/www",
+    "migration:generate": "sequelize-cli migration:generate",
+    "model:generate": "sequelize-cli model:generate",
+    "seed:generate": "sequelize-cli seed:generate"
   },
   "repository": {
     "type": "git",
@@ -19,10 +30,18 @@
   },
   "homepage": "https://github.com/Ehubb1998/IMDB-Project#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
+    "express": "^4.17.1",
+    "express-bearer-token": "^2.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.2",
-    "sequelize": "^6.3.5"
+    "sequelize": "^5.22.3",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "nodemon": "^2.0.6"
   }
 }
