--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -31,13 +31,17 @@
   "homepage": "https://github.com/Ehubb1998/IMDB-Project#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
+    "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.2",
+    "pug": "^2.0.4",
     "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1"
   },
