--- a/Front-End/.gitignore
+++ b/Front-End/.gitignore
@@ -22,7 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/components/movie-genre/action/clips
-/components/movie-genre/action/images
-/components/movie-genre/comedy/images
-/components/movie-genre/comedy/clips
+# /components/movie-genre/action/clips
+# /components/movie-genre/action/images
+# /components/movie-genre/comedy/images
+# /components/movie-genre/comedy/clips
