Finished movie preview

--- a/Front-End/.gitignore
+++ b/Front-End/.gitignore
@@ -22,6 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+Avengers-Trailer.mp4
 # /components/movie-genre/action/clips
 # /components/movie-genre/action/images
 # /components/movie-genre/comedy/images
