--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config ./bin/www",
     "db:create": "dotenv sequelize-cli db:create",
     "db:drop": "dotenv sequelize-cli db:drop",
     "db:migrate": "dotenv sequelize-cli db:migrate",
@@ -16,7 +15,12 @@
     "dev": "dotenv nodemon ./bin/www",
     "migration:generate": "sequelize-cli migration:generate",
     "model:generate": "sequelize-cli model:generate",
-    "seed:generate": "sequelize-cli seed:generate"
+    "seed:generate": "sequelize-cli seed:generate",
+    "sequelize": "sequelize",
+    "sequelize-cli": "sequelize-cli",
+    "start": "per-env",
+    "start:development": "nodemon -r dotenv/config ./bin/www",
+    "start:production": "node ./bin/www"
   },
   "repository": {
     "type": "git",
