--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,7 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-Avengers-Trailer.mp4
+# Avengers-Trailer.mp4
 # /components/movie-genre/action/clips
 # /components/movie-genre/action/images
 # /components/movie-genre/comedy/images
