--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "seed:generate": "sequelize-cli seed:generate",
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
-    "start": "per-env",
+    "start": "node ./bin/www",
     "start:development": "nodemon -r dotenv/config ./bin/www",
     "start:production": "node ./bin/www"
   },
