--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
-    "start": "node ./bin/www",
+    "start": "per-env",
     "start:development": "nodemon -r dotenv/config ./bin/www",
     "start:production": "node ./bin/www"
   },
@@ -32,6 +32,7 @@
     "express-bearer-token": "^2.4.0",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
+    "per-env": "^1.0.2",
     "pg": "^8.4.2",
     "pug": "^2.0.4",
     "sequelize": "^5.22.3",
