--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "express-bearer-token": "^2.4.0",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "per-env": "^1.0.2",
     "pg": "^8.4.2",
     "pug": "^2.0.4",
